--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ requests==2.21.0
 tensorflow==1.13.0rc1
 scikit-learn==0.20.2
 numpy==1.16.1
+python-dotenv==0.10.1
+pymongo==3.7.2
+dnspython==1.16.0
